# atpr-to

./: .gitignore  CLAUDE.md  Cargo.toml  Config.toml  Justfile  LICENSE  README.md  build.rs  progress.md  samconfig.toml  template.yaml
.claude/skills/pico-css/: SKILL.md
.claude/skills/pico-css/references/: components.md  content.md  customization.md  forms.md  layout.md
.github/workflows/: ci.yml
lexicons/: to.atpr.link.json
lexicons/to/atpr/: fullPermissions.json  link.json
src/: auth.rs  config.rs  delete.rs  error.rs  info.rs  lib.rs  links.rs  logout.rs  main.rs  qr.rs  resolve.rs  shorten.rs  static_files.rs  ui.rs
static/: app.css
templates/: base.html  dashboard.html  error.html  home.html  info.html
tests/: resolve_integration.rs
