[package]
name = "atpr-to"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
# jacquard = { version = "0.11" }
#jacquard-common = { version = "0.11" }
#jacquard-derive = { version = "0.11" }
#jacquard-lexicon = { version = "0.11" }
jacquard = { git = "https://github.com/seqre-contrib/jacquard.git", branch = "include-scope" }
jacquard-common = { git = "https://github.com/seqre-contrib/jacquard.git", branch = "include-scope" }
jacquard-derive = { git = "https://github.com/seqre-contrib/jacquard.git", branch = "include-scope" }
jacquard-lexicon = { git = "https://github.com/seqre-contrib/jacquard.git", branch = "include-scope" }
# jacquard = { path = "../jacquard/crates/jacquard" }
# jacquard-common = { path = "../jacquard/crates/jacquard-common" }
# jacquard-derive = { path = "../jacquard/crates/jacquard-derive" }
# jacquard-lexicon = { path = "../jacquard/crates/jacquard-lexicon" }
lambda_http = "1.0.0"
inventory = "0.3"
rustversion = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tower = "0.5"
url = "2"
urlencoding = "2"
tracing = "0.1"
anyhow = "1"
config = "0.15"
askama = "0.15"
qrcode = "0.14"
tower_governor = "0.8.0"
rust-embed = "8"
mime_guess = "2"

[build-dependencies]
#jacquard-lexicon = { version = "0.11", features = ["codegen"] }
jacquard-lexicon = { git = "https://github.com/seqre-contrib/jacquard.git", branch = "include-scope", features = ["codegen"] }
# jacquard-lexicon = { path = "../jacquard/crates/jacquard-lexicon", features = ["codegen"] }

[dev-dependencies]
wiremock = "0.6.5"
